[package]
name = "mcp-rtk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.mcp-rtk]
path = ".."

[[bin]]
name = "fuzz_filter_engine"
path = "fuzz_targets/fuzz_filter_engine.rs"
doc = false

[[bin]]
name = "fuzz_json_ops"
path = "fuzz_targets/fuzz_json_ops.rs"
doc = false
